service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  echo
  labels:
    app: echo
spec:
  selector:
    app:  echo
  ports:
  - name:  http
    port:  80
