ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  labels:
    app: echo
spec:
  ingressClassName: nginx
  rules:
  - host: ch05.gihyo.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: echo
            port: 
              number: 80
